--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	
+	modImplementation ("me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}")
+	modImplementation ("me.shedaniel.cloth:config-2:${project.cloth_config_version}")
+	modImplementation ("io.github.prospector:modmenu:${project.mod_menu_version}")
 }
 
 processResources {
