--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,14 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.9.1+build.205
 
 # Mod Properties
-	mod_version = 1.0.2
+	mod_version = 2.0.0
 	maven_group = eu.midnightdust
 	archives_base_name = midnight-hats
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.17.2+build.396-1.16
+	
+	auto_config_version = 3.2.0-unstable
+	cloth_config_version = 4.7.0-unstable
+	mod_menu_version = 1.14.6+build.31
